configure correctly with the new dataset witch has 6 classes

--- a/configs/test/dla34.yaml
+++ b/configs/test/dla34.yaml
@@ -17,13 +17,16 @@ model:
 dataset:
   img_size: [512,512]
   anno_type: 'point'
-  num_classes: 4
+  num_classes: 7
   collate_fn: null
 
   class_def:
-    1: 'camel'
-    2: 'donkey'
-    3: 'sheep/goat'
+    1: 'topi'
+    2: 'buffalo'
+    3: 'kob'
+    4: 'warthog'
+    5: 'waterbuck'
+    6: 'elephant'
 
   name: 'CSVDataset'
   csv_file: '/path/to/your/file.csv'
