--- a/configs/train/herdnet.yaml
+++ b/configs/train/herdnet.yaml
@@ -39,13 +39,16 @@ losses:
 datasets:
   img_size: [512,512]
   anno_type: 'point'
-  num_classes: 4 
+  num_classes: 7 
   collate_fn: null
 
   class_def:
-    1: 'camel'
-    2: 'donkey'
-    3: 'sheep/goat'
+    1: 'topi'
+    2: 'buffalo'
+    3: 'kob'
+    4: 'warthog'
+    5: 'waterbuck'
+    6: 'elephant'
   
   train:
     name: 'CSVDataset'
@@ -55,6 +58,10 @@ datasets:
     sampler: null
 
     albu_transforms:
+      Resize:
+        height: 512
+        width: 512
+        p: 1.0
       HorizontalFlip:
         p: 0.5
       MotionBlur:
@@ -79,6 +86,10 @@ datasets:
     root_dir: '/path/to/your/images/folder'
 
     albu_transforms:
+      Resize:
+        height: 512
+        width: 512
+        p: 1.0
       Normalize:
         p: 1.0
     
