chore: add documentation about why 7 classes instead 6

--- a/configs/test/faster_rcnn.yaml
+++ b/configs/test/faster_rcnn.yaml
@@ -18,7 +18,7 @@ model:
 dataset:
   img_size: [512,512]
   anno_type: 'bbox'
-  num_classes: 7
+  num_classes: 7 # Class 0 (background)
   collate_fn: 'collate_fn'
 
   class_def:
