--- a/configs/train/faster_rcnn.yaml
+++ b/configs/train/faster_rcnn.yaml
@@ -23,7 +23,7 @@ losses: null
 datasets:
   img_size: [512,512]
   anno_type: 'bbox'
-  num_classes: 7
+  num_classes: 7 # Class 0 (background)
   collate_fn: 'collate_fn'
 
   class_def:
