add dataset loader workers to improve gpu usage

--- a/configs/train/herdnet.yaml
+++ b/configs/train/herdnet.yaml
@@ -106,6 +106,9 @@ training_settings:
   optimizer: 'adam'
   lr: 1e-4
   weight_decay: 0.0005
+  num_workers:
+    train: 16
+    eval: 8
   auto_lr:
     mode: 'max'
     patience: 10
