--- a/configs/train/dla34.yaml
+++ b/configs/train/dla34.yaml
@@ -82,6 +82,7 @@ training_settings:
   valid_freq: 1
   print_freq: 100
   batch_size: 4
+  val_batch_size: 4
   optimizer: 'adam'
   lr: 1e-5
   weight_decay: 0.0005
