--- a/configs/train/herdnet.yaml
+++ b/configs/train/herdnet.yaml
@@ -103,6 +103,7 @@ training_settings:
   valid_freq: 1
   print_freq: 100
   batch_size: 8
+  val_batch_size: 4
   optimizer: 'adam'
   lr: 1e-4
   weight_decay: 0.0005
