fix down ratio to match with model configs

--- a/configs/train/herdnet_dinov3_vitb16.yaml
+++ b/configs/train/herdnet_dinov3_vitb16.yaml
@@ -100,7 +100,7 @@ datasets:
           radius: 2
           num_classes: ${train.datasets.num_classes}
           squeeze: True
-          down_ratio: 32
+          down_ratio: ${train.model.kwargs.down_ratio}
 
   validate:
     name: 'CSVDataset'
