--- a/configs/train/herdnet_dinov3_vitb16.yaml
+++ b/configs/train/herdnet_dinov3_vitb16.yaml
@@ -151,9 +151,11 @@ training_settings:
     validate_on: 'f1_score'
     kwargs:
       print_freq: 10
+      optimize_threshold: true  # Enable threshold optimization
+      threshold_range: [0.01, 0.02, 0.03, 0.05, 0.07, 0.1, 0.15, 0.2, 0.3]  # Range to test
       lmds_kwargs:
         kernel_size: [3,3]
-        adapt_ts: 0.05
+        adapt_ts: 0.05  # Initial value, will be optimized
   stitcher:
     name: 'HerdNetStitcher'
     kwargs:
