--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ scripts/
 
 **/*.log
 wandb
-configs/train/*
-configs/test/*
+# configs/train/*
+# configs/test/*
 !configs/*/faster_rcnn.yaml
 !configs/*/dla34.yaml
 !configs/*/herdnet.yaml
